# mean-free-path-emulator

./: README.md  pyproject.toml
mfp_emulator/: __init__.py  cli.py  cosmology.py  data.py  emulator.py  grid_search.py  ndot.py  reionization.py
tests/: example_tests.txt  test_package.py
