[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfp_emulator"
version = "0.1.0"
description = "Neural network emulator for mean free path predictions in reionization studies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["reionization", "cosmology", "emulator", "neural network", "mean free path"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "torch>=1.9",
    "scikit-learn>=0.24",
]

[project.optional-dependencies]
cosmology = ["colossus>=1.3"]
plotting = ["matplotlib>=3.4"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]
all = [
    "mfp_emulator[cosmology,plotting,dev]",
]

[project.scripts]
mfp-emulator = "mfp_emulator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mfp_emulator"
Documentation = "https://github.com/yourusername/mfp_emulator#readme"
Repository = "https://github.com/yourusername/mfp_emulator"

[tool.setuptools.packages.find]
where = ["."]
include = ["mfp_emulator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
